--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/1. 下载安装谷歌浏览器录制插件.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/1. 下载安装谷歌浏览器录制插件.md
@@ -27,3 +27,11 @@ c）解压插件压缩包，如图5-3所示：
 ![5-3](https://www.feisuanyz.com/fstest/xtpz/google/google_3.png)
 
 ##### 图5-3 解压插件压缩包
+
+##### 1.5.1.2 安装谷歌浏览器录制插件
+
+a）打开谷歌浏览器，单击右上角三个点符号，选择“更多工具 > 扩展程序”，如图5-4所示：
+
+![5-4](https://www.feisuanyz.com/fstest/xtpz/google/google_4.png)
+
+##### 图5-4 选择扩展程序
