--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
@@ -1,1 +1,9 @@
-test
+### 1. 系统配置
+
+#### 1.5 接口录制
+
+##### 1.5.2 录制接口
+
+本节将为您具体介绍如何使用谷歌浏览器录制插件进行接口的录制。通过录制接口，您可以把录制期间进行所有操作调用到的接口信息保存下来应用到全自动测试平台，对接口进行调试。
+
+##### 1.5.2.1 前提条件
