--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
@@ -7,3 +7,11 @@
 本节将为您具体介绍如何使用谷歌浏览器录制插件进行接口的录制。通过录制接口，您可以把录制期间进行所有操作调用到的接口信息保存下来应用到全自动测试平台，对接口进行调试。
 
 ##### 1.5.2.1 前提条件
+
+您需要先下载并安装好谷歌浏览器录制插件。
+
+##### 1.5.2.2 操作步骤
+
+a）进入谷歌浏览器，单击“扩展程序”选项，选择“全自动测试平台”，如图2-1所示：
+
+##### 说明：您也可以单击右方的固定按钮，将录制插件固定在菜单栏以便使用。
