--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
@@ -15,3 +15,11 @@
 a）进入谷歌浏览器，单击“扩展程序”选项，选择“全自动测试平台”，如图2-1所示：
 
 ##### 说明：您也可以单击右方的固定按钮，将录制插件固定在菜单栏以便使用。
+
+![2-1](https://www.feisuanyz.com/fstest/xtpz/google/google_8.png)
+
+##### 图2-1 选择扩展程序
+
+b）系统弹出录制页面，单击页面下方“高级选项”，选择需录制接口的类型，如图2-2所示：
+
+##### 说明：插件默认的录制类型为“Http Request”和“Cookie”，若需录制其它类型，勾选所需录制类型，单击开始录制即可生效。
