--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
@@ -41,3 +41,13 @@ c）单击“开始录制”按钮，进行接口的录制，如图2-3所示：
 d）单击“创建分组”，输入分组名称，单击“确定”创建分组成功，如图2-4所示：
 
 ![2-4](https://www.feisuanyz.com/fstest/xtpz/google/google_11.png)
+
+##### 图2-4 创建分组
+
+e）单击右上方录制插件快捷图标，您可以在录制页面看到“创建分组”操作调用了2个接口，如图2-5所示：
+
+![2-5](https://www.feisuanyz.com/fstest/xtpz/google/google_12.png)
+
+##### 图2-5 查看录制的测试用例
+
+f）选择测试用例，您可以修改当前测试用例的名称，如图2-6所示：
