--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/2. 录制接口.md
@@ -77,3 +77,11 @@ g）当前录制完成后，单击“停止录制”即可，如图2-8所示：
 ![2-8](https://www.feisuanyz.com/fstest/xtpz/google/google_15.png)
 
 ##### 图2-8 停止录制
+
+h）录制完成后，选择需应用到的全自动测试平台项目和测试用例模块，如图2-9所示：
+
+![2-9](https://www.feisuanyz.com/fstest/xtpz/google/google_16.png)
+
+##### 图2-9 录制页面
+
+i）单击“应用录制数据”，系统提示操作成功，之后您可以到全自动测试平台指定的项目和测试用例模块下查看录制数据。
