--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/3. 查看及使用录制数据.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/3. 查看及使用录制数据.md
@@ -5,3 +5,15 @@
 ##### 1.5.3 查看及使用录制数据
 
 本节为您介绍如何查看录制数据（包含测试用例和接口数据），以及如何在不同的环境下使用录制的接口数据。
+
+##### 1.5.3.1 前提条件
+
+您已完成一次接口录制。
+
+##### 1.5.3.2 查看测试用例
+
+进入全自动测试平台在录制接口时指定的项目和测试用例模块，您可以看到该测试用例模块下已自动创建了录制的测试用例，录制的测试用例详情内容为空，您可以自行设置。
+
+![3-1](https://www.feisuanyz.com/fstest/xtpz/google/google_17.png)
+
+##### 图3-1 查看测试用例
