--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/3. 查看及使用录制数据.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/3. 查看及使用录制数据.md
@@ -17,3 +17,13 @@
 ![3-1](https://www.feisuanyz.com/fstest/xtpz/google/google_17.png)
 
 ##### 图3-1 查看测试用例
+
+##### 1.5.3.3 查看测试用例下的所有接口数据
+
+a）单击平台上方“测试场景 > 测试场景管理”，选择对应的测试用例模块。
+
+![3-2](https://www.feisuanyz.com/fstest/xtpz/google/google_18.png)
+
+##### 图3-2 选择对应的测试用例模块
+
+b）选择录制的测试用例，单击“场景配置”，即可查看到当前测试用例下的所有接口信息。
