--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/3. 查看及使用录制数据.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/3. 查看及使用录制数据.md
@@ -49,3 +49,7 @@ a）新增环境配置
 ##### 图3-4 新增环境配置
 
 b）选择环境配置、执行测试场景
+
+![3-5](https://www.feisuanyz.com/fstest/xtpz/google/record_3.png)
+
+##### 图3-5 执行测试场景
