--- a/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
@@ -1,1 +1,7 @@
-test
+### 1. 系统配置
+
+#### 1.6 本地客户端
+
+##### 1.6.1 本地客户端的使用
+
+全自动测试平台支持使用本地客户端，即支持用户在本地服务器上使用全自动测试平台。在全自动测试平台下载本地客户端并启动成功后，即可通过本地服务器访问全自动测试平台，本节将为您介绍使用本地客户端访问全自动测试平台的具体操作过程。
