--- a/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
@@ -5,3 +5,11 @@
 ##### 1.6.1 本地客户端的使用
 
 全自动测试平台支持使用本地客户端，即支持用户在本地服务器上使用全自动测试平台。在全自动测试平台下载本地客户端并启动成功后，即可通过本地服务器访问全自动测试平台，本节将为您介绍使用本地客户端访问全自动测试平台的具体操作过程。
+
+##### 说明：
+
+##### a）首次使用本地客户端访问全自动测试平台时，本地客户端会同步使用飞算云智官网访问全自动测试平台时产生的所有数据。
+
+##### b）后续登录使用时，两端的环境配置和资源池等内部数据将不会同步，其它数据会同步。
+
+##### 1.6.1.1 操作步骤
