--- a/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
@@ -13,3 +13,11 @@
 ##### b）后续登录使用时，两端的环境配置和资源池等内部数据将不会同步，其它数据会同步。
 
 ##### 1.6.1.1 操作步骤
+
+a）进入全自动测试平台，单击右上角“工具下载”选项，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fstest/xtpz/locallogin/local_1_1.png)
+
+##### 图1-1 全自动测试平台首页
+
+b）在工具下载页面，单击“本地客户端”，下载本地客户端压缩包，如图1-2所示：
