--- a/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
@@ -43,3 +43,14 @@ e）若出现如图1-5所示程序，即说明本地客户端启动成功：
 ![1-5](https://www.feisuanyz.com/fstest/xtpz/locallogin/local_1_5.png)
 
 ##### 图1-5 本地客户端启动成功
+
+f）在浏览器地址栏输入本地服务器地址加上端口号，回车进入登录页面，如图1-6所示：
+
+##### 说明：此处输入的端口号需确保未被占用，默认为8080。若需修改端口号，您可以创建一个application.yml配置文件存放于startup.bat命令同级目录下，application.yml配置文件内容如下所示，端口号可自行设置。
+
+```
+server:
+  port: 8184
+```
+
+![1-6](https://www.feisuanyz.com/fstest/xtpz/locallogin/local_1_6.png)
