--- a/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/6. 本地客户端/1. 本地客户端的使用.md
@@ -54,3 +54,9 @@ server:
 ```
 
 ![1-6](https://www.feisuanyz.com/fstest/xtpz/locallogin/local_1_6.png)
+
+##### 图1-6 登录页面
+
+g）输入正确的账号和密码，登录成功即可正常访问全自动测试平台。
+
+##### 说明：通过本地客户端访问全自动测试平台的账号密码与通过飞算云智官网访问全自动测试平台的账号密码一致。
