--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/1. 创建消息模板.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/1. 创建消息模板.md
@@ -1,1 +1,9 @@
-test
+### 1. 系统配置
+
+#### 1.7 消息通知
+
+##### 1.7.1 基础概述
+
+全自动测试平台提供消息通知功能。通过创建消息模板、配置邮箱以及创建消息事件，便可以实现根据不同的使用场景因触发相应的消息事件后自动发送给指定收件人不同的邮件内容。
+
+##### 1.7.2 创建消息模板
