--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/1. 创建消息模板.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/1. 创建消息模板.md
@@ -7,3 +7,13 @@
 全自动测试平台提供消息通知功能。通过创建消息模板、配置邮箱以及创建消息事件，便可以实现根据不同的使用场景因触发相应的消息事件后自动发送给指定收件人不同的邮件内容。
 
 ##### 1.7.2 创建消息模板
+
+消息模板用于统一管理消息通知发送邮件的内容模版，用户可以根据不同的使用场景配置不同的消息模版。在创建消息事件时选择对应消息模版后，发送消息通知时就会按对应的模版内容以邮箱或站内信的方式发送给指定接收人。
+
+本节为您介绍如何创建消息模板，分为邮件模板和站内信模板两种类型，您可以按需选择创建。
+
+##### 注意：
+
+##### 若您选择创建邮件模板，则后续需要进行配置邮箱和创建消息事件操作，邮件模板即可生效。
+
+##### 若您选择创建站内信模板，则后续不需要配置邮箱，直接创建消息事件即可。
