--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/1. 创建消息模板.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/1. 创建消息模板.md
@@ -17,3 +17,9 @@
 ##### 若您选择创建邮件模板，则后续需要进行配置邮箱和创建消息事件操作，邮件模板即可生效。
 
 ##### 若您选择创建站内信模板，则后续不需要配置邮箱，直接创建消息事件即可。
+
+##### 详细操作请参见[《SoFlu全自动测试平台教程第1.7.3节：配置邮箱》](https://gitee.com/feisuanyz/SoFlu-adp/edit/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/7.%20%E6%B6%88%E6%81%AF%E9%80%9A%E7%9F%A5/2.%20%E9%85%8D%E7%BD%AE%E9%82%AE%E7%AE%B1.md)和[《SoFlu全自动测试平台教程第1.7.4节：创建消息事件》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/7.%20%E6%B6%88%E6%81%AF%E9%80%9A%E7%9F%A5/3.%20%E5%88%9B%E5%BB%BA%E6%B6%88%E6%81%AF%E4%BA%8B%E4%BB%B6.md)。
+
+##### 1.7.2.1 创建邮件模板
+
+a）进入全自动测试平台，单击页面右上角“系统设置”按钮进入系统设置页面，再次单击“ 服务 > 模版管理 > 邮件模版 ”开始创建邮件模板。
