--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/1. 创建消息模板.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/1. 创建消息模板.md
@@ -23,3 +23,13 @@
 ##### 1.7.2.1 创建邮件模板
 
 a）进入全自动测试平台，单击页面右上角“系统设置”按钮进入系统设置页面，再次单击“ 服务 > 模版管理 > 邮件模版 ”开始创建邮件模板。
+
+![1-1](https://www.feisuanyz.com/fstest/xtpz/message/xiaoximuban_1.png)
+
+##### 图1-1 开始创建邮件模板
+
+b）单击“新增模版”，自定义填写模版名称、邮件主题、邮件内容，填写完成后，单击“确定”即可。
+
+##### 说明：邮件内容可以使用动态参数占位符，系统便会在发送邮件时获取到当前动态参数字段的值并展示在内容中，单击内容示例可以查看更多动态参数占位符定义。
+
+![1-2](https://www.feisuanyz.com/fstest/xtpz/message/xiaoximuban_2.png)
