--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/2. 配置邮箱.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/2. 配置邮箱.md
@@ -1,1 +1,9 @@
-test
+### 1. 系统配置
+
+#### 1.7 消息通知
+
+##### 1.7.3 配置邮箱
+
+创建好邮件模板之后，您需要通过配置相应邮箱的SMTP服务信息，设置发件人邮件地址，同时设置收件人邮箱地址，以保证可以正常接收到所绑定消息事件的邮件消息通知。本节将为您介绍如何设置发件人和收件人的邮箱地址。
+
+##### SMTP服务主要用于传递系统之间的邮件信息，提供有关来信的通知。
