--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/2. 配置邮箱.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/2. 配置邮箱.md
@@ -7,3 +7,11 @@
 创建好邮件模板之后，您需要通过配置相应邮箱的SMTP服务信息，设置发件人邮件地址，同时设置收件人邮箱地址，以保证可以正常接收到所绑定消息事件的邮件消息通知。本节将为您介绍如何设置发件人和收件人的邮箱地址。
 
 ##### SMTP服务主要用于传递系统之间的邮件信息，提供有关来信的通知。
+
+##### 1.7.3.1 前提条件
+
+a）您需要拥有“消息配置”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.7.3.2 操作步骤
