--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/2. 配置邮箱.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/2. 配置邮箱.md
@@ -15,3 +15,11 @@ a）您需要拥有“消息配置”模块的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 1.7.3.2 操作步骤
+
+a）在系统设置页面，单击“服务 > 消息配置 > 邮箱配置”，进入邮箱配置页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/xtpz/mailmess/youxiang_1.png)
+
+##### 图2-1 进入邮箱配置页面
+
+b）填写SMTP服务的主机地址、端口号，以及SMTP服务的账户和密码，如图2-2所示：
