--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/2. 配置邮箱.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/2. 配置邮箱.md
@@ -39,3 +39,11 @@ c）输入邮件收件人地址，单击“测试连接”，如图2-3所示：
 ##### 注意：此处的邮件收件人地址仅用于测试配置的SMTP账户是否正确，只在当前页面有效，真正接收消息通知的邮箱在“系统 > 个人信息”中配置，如图3-4所示：
 
 ![2-4](https://www.feisuanyz.com/fstest/xtpz/mailmess/youxiang_5.png)
+
+##### 图2-4 填写邮件收件人
+
+d）打开上一步填写的收件人邮箱，若收到测试邮件，则说明配置正确；若没有，则说明上面的配置信息有误，需重新配置，如图2-5所示：
+
+![2-5](https://www.feisuanyz.com/fstest/xtpz/mailmess/youxiang_4.png)
+
+##### 图2-5 查看测试邮件
