--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
@@ -5,3 +5,13 @@
 ##### 1.7.4 创建消息事件
 
 通过创建消息事件，创建的邮件模板和站内信模板即可生效，当触发对应消息事件时，系统便会自动发送消息通知。
+
+本节为您介绍如何创建消息事件。
+
+##### 1.7.4.1 前提条件
+
+您已创建所需使用的消息模板。
+
+##### 1.7.4.2 操作步骤
+
+a）开始创建消息事件
