--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
@@ -15,3 +15,13 @@
 ##### 1.7.4.2 操作步骤
 
 a）开始创建消息事件
+
+进入全自动测试平台系统设置页面，单击“服务 > 消息配置 > 消息事件”开始创建消息事件。
+
+![3-1](https://www.feisuanyz.com/fstest/xtpz/mailmess/xiaoxishijian1_1.png)
+
+##### 图3-1 开始创建消息事件
+
+b）选择消息分组和消息事件
+
+##### 说明：
