--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
@@ -25,3 +25,11 @@ a）开始创建消息事件
 b）选择消息分组和消息事件
 
 ##### 说明：
+
+##### 消息分组分为测试用例、性能测试和测试计划三种，当消息分组选择为测试用例时，消息事件可以选择用例被评论、用例被评审、用例已评审三种情况；当消息分组选择为性能测试或测试计划时，消息事件仅可以选择执行结束的情况。
+
+c）选择接收人和接收类型
+
+##### 说明：可选的接收人包括创建人、更新人或当前租户下的用户，但若选择的用户未被授权某项目，则该用户不会接收到该项目对应消息事件的消息；接收类型包括邮件和站内信。
+
+d）选择消息模板
