--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
@@ -33,3 +33,11 @@ c）选择接收人和接收类型
 ##### 说明：可选的接收人包括创建人、更新人或当前租户下的用户，但若选择的用户未被授权某项目，则该用户不会接收到该项目对应消息事件的消息；接收类型包括邮件和站内信。
 
 d）选择消息模板
+
+选择所需使用的消息模板即可。
+
+e）新增消息事件
+
+消息事件的所有信息选择完毕后，单击“新增”即新增消息事件成功，新增的消息事件将对应显示在下方消息分组中，您可以下方消息分组中对消息事件进行修改删除操作。
+
+邮件通知示例：
