--- a/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/7. 消息通知/3. 创建消息事件.md
@@ -41,3 +41,13 @@ e）新增消息事件
 消息事件的所有信息选择完毕后，单击“新增”即新增消息事件成功，新增的消息事件将对应显示在下方消息分组中，您可以下方消息分组中对消息事件进行修改删除操作。
 
 邮件通知示例：
+
+![3-2](https://www.feisuanyz.com/fstest/xtpz/mailmess/xiaoxishijian_12.png)
+
+##### 图3-2 邮件通知示例
+
+站内信通知示例：
+
+![3-3](https://www.feisuanyz.com/fstest/xtpz/mailmess/xiaoxishijian1_2.png)
+
+##### 图3-3 站内信通知示例
