--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/1. 新建项目.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/1. 新建项目.md
@@ -1,1 +1,11 @@
-test
+### 2. 项目管理
+
+#### 2.1 项目管理
+
+##### 2.1.1 基础概述
+
+a）全自动测试平台以项目为维度，按创建时间段降序展示。一个账号允许创建多个项目，一个项目允许多人进行管理。项目管理员包含项目创建人和被授权的人，所属同租户下的其它人员，允许被授权为项目管理员角色。
+
+b）环境配置管理项目的全局变量配置、HTTP域名、请求头、请求参数等信息，这些信息用于接口测试和场景测试。每个URL的运行必须建立在某个环境，每个项目在创建时都有默认环境，若没有配置相关信息，接口测试将无法通过。
+
+c）进入项目，首页展示项目概览，包含数据统计、通过率、每周每月新增数等内容。
