--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/1. 新建项目.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/1. 新建项目.md
@@ -33,3 +33,11 @@ c）选择缺陷模板，输入禅道项目ID，便于进行缺陷管理。
 ##### 说明：
 
 ##### c1）在系统设置>>模板管理>>缺陷模板管理中可创建缺陷模版，关于如何创建缺陷模板可参见文档测试追踪3-4-3创建缺陷模板。
+
+##### c2）禅道项目ID查看方法：使用系统管理员账号登录禅道系统，点击“我的地盘 > 项目”，可查看到对应项目的ID，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fstest/xmgl/project_2_1_2_3.png)
+
+##### 图1-3 查看禅道项目ID
+
+d）单击“提交”即创建项目完成。
