--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/3. 删除项目.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/3. 删除项目.md
@@ -7,3 +7,11 @@
 本节主要介绍在全自动测试平台删除项目的具体操作步骤。
 
 ##### 2.1.3.1 操作步骤
+
+##### 注意：若欲删除项目中有正在运行的性能测试，则该项目不能进行删除操作。
+
+a）进入全自动测试平台，单击页面上方的“项目设置”选项，进入项目设置页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/xmgl/4.png)
+
+##### 图3-1 项目设置页面
