--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/4. 项目授权.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/4. 项目授权.md
@@ -5,3 +5,9 @@
 ##### 2.1.4 项目授权
 
 本节主要介绍如何将已创建的项目授权给他人的具体操作过程，经授权的用户可以对项目进行管理。
+
+##### 2.1.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方的“项目设置”选项，进入项目设置页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/xmgl/xmsq_5.png)
