--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/4. 项目授权.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/4. 项目授权.md
@@ -11,3 +11,11 @@
 a）进入全自动测试平台，单击页面上方的“项目设置”选项，进入项目设置页面，如图4-1所示：
 
 ![4-1](https://www.feisuanyz.com/fstest/xmgl/xmsq_5.png)
+
+##### 图4-1 项目设置页面
+
+b）在页面左侧选择“授权管理”，页面展示可被授权的用户列表。
+
+c）勾选需授权的用户，并设置管理员角色。
+
+d）设置完毕后，单击“保存”即可。
