--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/5. 项目概览.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/5. 项目概览.md
@@ -5,3 +5,11 @@
 ##### 2.1.5 项目概览
 
 本节主要对指定项目的大概情况进行展示，如图5-1所示，包含以下内容：
+
+a）各类测试如用例评审、接口执行、场景执行、性能测试的通过率展示；
+
+b）执行中的测试计划；
+
+c）运行中的性能测试；
+
+d）对项目接口数量、测试用例数量、测试场景数量、测试计划数量的统计；
