--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/5. 项目概览.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/5. 项目概览.md
@@ -13,3 +13,11 @@ b）执行中的测试计划；
 c）运行中的性能测试；
 
 d）对项目接口数量、测试用例数量、测试场景数量、测试计划数量的统计；
+
+e）用例评审；
+
+f）测试用例等。
+
+![5-1](https://www.feisuanyz.com/fstest/xmgl/10.png)
+
+##### 图5-1 项目概览页面
