--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/6. 项目分组.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/6. 项目分组.md
@@ -5,3 +5,11 @@
 ##### 2.1.6 项目分组
 
 用户可以对项目进行分组归类，方便查找。本节将为您具体介绍如何创建分组、修改分组以及删除分组。
+
+##### 2.1.6.1 创建分组
+
+a）进入全自动测试平台，单击页面上方“默认分组”选项框，单击“创建分组”，如图6-1所示：
+
+![6-1](https://www.feisuanyz.com/fstest/xmgl/progroup_1.png)
+
+##### 图6-1 分组选项框
