--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/7. 项目导出.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/7. 项目导出.md
@@ -5,3 +5,11 @@
 ##### 2.1.7 项目导出
 
 本节为您介绍如何将项目导出，项目导出之后可在同租户下导入项目。
+
+##### 2.1.7.1 创建分组
+
+a）进入全自动测试平台，单击页面上方“项目配置 > 项目管理”，进入项目管理页面，如图7-1所示：
+
+![7-1](https://www.feisuanyz.com/fstest/xmgl/daochuxiangmu_1.png)
+
+##### 图7-1 项目管理页面
