--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/8. 项目导入.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/8. 项目导入.md
@@ -5,3 +5,9 @@
 ##### 2.1.8 项目导入
 
 本节为您介绍如何导入项目。
+
+##### 注意：项目导入操作仅能在同租户下进行，不同租户下不可导入。
+
+##### 2.1.8.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方当前项目选项，选择“导入项目”，如图8-1所示：
