--- a/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/8. 项目导入.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/1. 项目管理/8. 项目导入.md
@@ -11,3 +11,9 @@
 ##### 2.1.8.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方当前项目选项，选择“导入项目”，如图8-1所示：
+
+![8-1](https://www.feisuanyz.com/fstest/xmgl/daoruxiangmu_1.png)
+
+##### 图8-1 选择导入项目
+
+b）进入导入项目页面，选择分组，填写项目名称，上传项目包后单击“提交”即可，如图8-2所示：
