--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/1. 查询环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/1. 查询环境配置.md
@@ -7,3 +7,9 @@
 本节主要介绍查询指定项目环境配置的具体操作过程。
 
 ##### 2.2.1.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方的“项目设置”选项，进入项目设置页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fstest/xmgl/6.png)
+
+##### 图1-1 项目设置页面
