--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
@@ -5,3 +5,11 @@
 ##### 2.2.2 新增环境配置
 
 本节为您介绍如何新增环境配置。
+
+新增环境配置时，您可以根据实际需要进行HTTP、全局变量、证书，以及TCP四个部分的配置。
+
+##### 2.2.2.1 操作步骤
+
+a）新增环境配置
+
+进入全自动测试平台，单击平台上方“项目设置”选项，选择“项目管理”进入环境列表，单击“+”即可新增环境配置。
