--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
@@ -13,3 +13,11 @@
 a）新增环境配置
 
 进入全自动测试平台，单击平台上方“项目设置”选项，选择“项目管理”进入环境列表，单击“+”即可新增环境配置。
+
+![2-1](https://www.feisuanyz.com/fstest/xmgl/huanjingpeizhi/huanjing_1.png)
+
+##### 图2-1 新增环境配置
+
+b）填写环境的名称及备注信息
+
+c）HTTP配置（可选）
