--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
@@ -21,3 +21,13 @@ a）新增环境配置
 b）填写环境的名称及备注信息
 
 c）HTTP配置（可选）
+
+单击“HTTP配置”页签，填写域名或IP地址信息，选择所属接口，添加请求头信息，单击“添加域名配置”即可将当前域名添加至下方域名列表，若需添加多个域名配置，再进行相同操作即可。
+
+![2-2](https://www.feisuanyz.com/fstest/xmgl/huanjingpeizhi/huanjing_2.png)
+
+##### 图2-2 进行HTTP配置
+
+##### 说明：
+
+##### c1）HTTP配置用于配置域名或IP地址，用户可以添加多个域名配置，并且可以为域名设置所属接口，包含所有接口或指定模块下的接口或指定路径下的接口，同时可为域名添加请求头信息。
