--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
@@ -31,3 +31,13 @@ c）HTTP配置（可选）
 ##### 说明：
 
 ##### c1）HTTP配置用于配置域名或IP地址，用户可以添加多个域名配置，并且可以为域名设置所属接口，包含所有接口或指定模块下的接口或指定路径下的接口，同时可为域名添加请求头信息。
+
+##### c2）在为域名设置所属接口时，使用优先级为“路径 >> 模块 >> 所有”，即若某接口既属于某指定模块下，又可匹配某指定路径时，该接口将优先使用设置了指定路径的域名。
+
+##### c3）已添加的域名可在域名列表中双击修改，再更新域名配置即可。
+
+d）配置全局变量（可选）
+
+单击“全局变量”页签，选择“新增变量”即可设置全局变量，全局变量分为常量和函数两种类型。
+
+![2-3](https://www.feisuanyz.com/fstest/xmgl/huanjingpeizhi/huanjing_3.png)
