--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
@@ -41,3 +41,15 @@ d）配置全局变量（可选）
 单击“全局变量”页签，选择“新增变量”即可设置全局变量，全局变量分为常量和函数两种类型。
 
 ![2-3](https://www.feisuanyz.com/fstest/xmgl/huanjingpeizhi/huanjing_3.png)
+
+##### 图2-3 配置全局变量
+
+##### 说明：若在环境配置下配置了全局变量，则在任何一处（如测试场景、性能测试等）选择了该环境配置后即可使用该全局变量。
+
+e）证书配置（可选）
+
+单击“证书配置”页签，选择“上传文件”，输入证书密码，上传证书文件后单击“确定”即可。
+
+![2-4](https://www.feisuanyz.com/fstest/xmgl/huanjingpeizhi/huanjing_4.png)
+
+##### 图2-4 选择“上传文件”
