--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
@@ -53,3 +53,13 @@ e）证书配置（可选）
 ![2-4](https://www.feisuanyz.com/fstest/xmgl/huanjingpeizhi/huanjing_4.png)
 
 ##### 图2-4 选择“上传文件”
+
+![2-5](https://www.feisuanyz.com/fstest/xmgl/huanjingpeizhi/huanjing_5.png)
+
+##### 图2-5 上传证书文件
+
+##### 说明：
+
+##### e1）证书配置便于用户执行双向认证的https协议接口，若不需要执行双向认证的https协议接口，也可以不用进行证书配置，系统将默认执行单向认证的https协议接口。
+
+##### e2）目前只支持p12、jks、pfx格式的证书文件。
