--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
@@ -63,3 +63,13 @@ e）证书配置（可选）
 ##### e1）证书配置便于用户执行双向认证的https协议接口，若不需要执行双向认证的https协议接口，也可以不用进行证书配置，系统将默认执行单向认证的https协议接口。
 
 ##### e2）目前只支持p12、jks、pfx格式的证书文件。
+
+##### e3）一个证书可能存在多个条目，若未勾选“是否默认”选项，系统将默认使用第一条证书条目。
+
+f）TCP配置（可选）
+
+单击“TCP配置”页签，填写TCP配置的相关信息，若不清楚如何填写，可将鼠标移至？图标或参考JMeter TCP组件字段含义进行填写。
+
+![2-6](https://www.feisuanyz.com/fstest/xmgl/huanjingpeizhi/huanjing_6.png)
+
+##### 图2-6 TCP配置
