--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/2. 新增环境配置.md
@@ -73,3 +73,9 @@ f）TCP配置（可选）
 ![2-6](https://www.feisuanyz.com/fstest/xmgl/huanjingpeizhi/huanjing_6.png)
 
 ##### 图2-6 TCP配置
+
+##### TCP配置用于配置TCP请求，若在环境配置中进行了TCP配置，则在测试场景中创建自定义请求（请求类型选择为TCP且未填写相关信息）时，系统将默认使用环境配置中的值。
+
+g）保存环境配置
+
+所有环境配置信息填写完成后，单击“保存环境配置”即可。
