--- a/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/4. 删除环境配置.md
+++ b/SoFlu全自动测试平台教程/2. 项目管理/2. 环境配置/4. 删除环境配置.md
@@ -5,3 +5,11 @@
 ##### 2.2.4 删除环境配置
 
 本节主要介绍删除环境配置的具体操作过程。
+
+##### 2.2.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方的“项目设置”选项，进入项目设置页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/xmgl/9.png)
+
+##### 图4-1 项目设置页面
