--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/2. 新增测试用例模块.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/2. 新增测试用例模块.md
@@ -5,3 +5,13 @@
 ##### 3.1.1 测试用例模块
 
 本节主要介绍查询指定项目环境配置的具体操作过程。
+
+##### 3.1.1.3 新增测试用例模块
+
+本节主要介绍新增测试用例模块的具体操作过程。
+
+##### 3.1.1.3.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试用例”选项，即可在左侧页面查看测试用例模块，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cszz/1.png)
