--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/2. 新增测试用例模块.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/2. 新增测试用例模块.md
@@ -15,3 +15,13 @@
 a）进入全自动测试平台，单击页面上方“测试用例”选项，即可在左侧页面查看测试用例模块，如图2-1所示：
 
 ![2-1](https://www.feisuanyz.com/fstest/cszz/1.png)
+
+##### 图2-1 测试用例页面
+
+b）单击“+”按钮，新增测试用例模块，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fstest/cszz/2.png)
+
+##### 图2-2 新增测试用例模块
+
+c）输入模块名，单击“确定”即可。
