--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/3. 修改测试用例模块.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/3. 修改测试用例模块.md
@@ -5,3 +5,11 @@
 ##### 3.1.1 测试用例模块
 
 ##### 3.1.1.4 修改测试用例模块
+
+本节主要介绍修改测试用例模块的具体操作过程。
+
+##### 3.1.1.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试用例”选项，即可在左侧页面查看测试用例模块，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cszz/1.png)
