--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/3. 修改测试用例模块.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/3. 修改测试用例模块.md
@@ -13,3 +13,13 @@
 a）进入全自动测试平台，单击页面上方“测试用例”选项，即可在左侧页面查看测试用例模块，如图3-1所示：
 
 ![3-1](https://www.feisuanyz.com/fstest/cszz/1.png)
+
+##### 图3-1 测试用例页面
+
+b）选中需进行修改的测试用例模块，单击右侧三个点按钮，选择“修改模块名”，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fstest/cszz/3.png)
+
+##### 图3-2 修改模块名
+
+c）输入新的模块名，单击“确定”即可。
