--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/4. 删除测试用例模块.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/1. 测试用例模块/4. 删除测试用例模块.md
@@ -13,3 +13,11 @@
 ##### 注意：若欲删除的测试用例模块下已产生测试场景，则该模块不可删除。
 
 a）进入全自动测试平台，单击页面上方“测试用例”选项，即可在左侧页面查看测试用例模块，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cszz/1.png)
+
+##### 图4-1 测试用例页面
+
+b）选中需删除的测试用例模块，单击右侧三个点按钮，选择“删除模块”，如图4-2所示：
+
+![4-2](https://www.feisuanyz.com/fstest/cszz/4.png)
