--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/2. 新增测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/2. 新增测试用例.md
@@ -7,3 +7,11 @@
 ##### 3.1.2.2 新增测试用例
 
 本节将为您介绍新增测试用例的具体操作过程。
+
+##### 3.1.2.2.1 操作步骤
+
+a）进入测试用例页面，选择相应的测试用例模块，单击“新增用例”选项，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cszz/testyl/testyl_2_1.png)
+
+##### 图2-1 新增用例
