--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/3. 修改测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/3. 修改测试用例.md
@@ -7,3 +7,11 @@
 ##### 3.1.2.3 修改测试用例
 
 本节主要介绍修改测试用例的具体操作过程。
+
+##### 3.1.2.3.1 操作步骤
+
+##### 注意：已提交的测试用例不能修改，只能禁用或启用；若要修改需要撤回提交，但审核通过的测试用例不能撤回。
+
+a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cszz/8.png)
