--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/3. 修改测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/3. 修改测试用例.md
@@ -15,3 +15,9 @@
 a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图3-1所示：
 
 ![3-1](https://www.feisuanyz.com/fstest/cszz/8.png)
+
+##### 图3-1 修改测试用例
+
+b）在需修改测试用例的操作列，单击修改按钮，系统弹出测试用例编辑页面，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fstest/cszz/8_1.png)
