--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/4. 删除测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/4. 删除测试用例.md
@@ -7,3 +7,11 @@
 ##### 3.1.2.4 删除测试用例
 
 本节主要介绍删除测试用例的具体操作过程。
+
+##### 3.1.2.4.1 操作步骤
+
+##### 注意：已提交的测试用例不能删除，只能禁用或启用。
+
+a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cszz/9.png)
