--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/4. 删除测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/4. 删除测试用例.md
@@ -15,3 +15,9 @@
 a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图4-1所示：
 
 ![4-1](https://www.feisuanyz.com/fstest/cszz/9.png)
+
+##### 图4-1 删除测试用例
+
+b）在需删除测试用例的操作列，单击删除按钮。
+
+c）系统弹出提示信息，单击“确定”即可。
