--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/5. 提交测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/5. 提交测试用例.md
@@ -11,3 +11,9 @@
 ##### 3.1.2.5.1 操作步骤
 
 ##### 注意：测试用例提交后不能再修改信息，需要将测试用例撤回后才能修改。
+
+a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fstest/cszz/10.png)
+
+##### 图5-1 提交测试用例
