--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/6. 撤回测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/6. 撤回测试用例.md
@@ -11,3 +11,9 @@
 ##### 3.1.2.6.1 操作步骤
 
 ##### 注意：已提交未审核的测试用例允许撤回，但已审核的测试用例不允许撤回，只能禁用或启用。
+
+a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图6-1所示：
+
+![6-1](https://www.feisuanyz.com/fstest/cszz/11.png)
+
+##### 图6-1 测试用例页面
