--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/7. 禁用测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/7. 禁用测试用例.md
@@ -11,3 +11,9 @@
 ##### 3.1.2.7.1 操作步骤
 
 ##### 注意：已审核的测试用例不能删除，只能禁用，禁用后的测试用例无法关联性能测试、测试计划。
+
+a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图7-1所示：
+
+![7-1](https://www.feisuanyz.com/fstest/cszz/12.png)
+
+##### 图7-1 测试用例页面
