--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/8. 启用测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/8. 启用测试用例.md
@@ -5,3 +5,9 @@
 ##### 3.1.2 测试用例
 
 ##### 3.1.2.8 启用测试用例
+
+本节主要介绍启用测试用例的具体操作过程。
+
+##### 3.1.2.8.1 操作步骤
+
+##### 注意：已审核的测试用例不能删除，只能禁用，禁用后的测试用例无法关联性能测试、测试计划。
