--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/8. 启用测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/8. 启用测试用例.md
@@ -11,3 +11,13 @@
 ##### 3.1.2.8.1 操作步骤
 
 ##### 注意：已审核的测试用例不能删除，只能禁用，禁用后的测试用例无法关联性能测试、测试计划。
+
+a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图8-1所示：
+
+![8-1](https://www.feisuanyz.com/fstest/cszz/13.png)
+
+##### 图8-1 测试用例页面
+
+b）在需禁用测试用例的操作列，单击“更多”选项，选择“启用”。
+
+c）系统弹出提示信息，单击“确定”即可。
