--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/9. 查看测试用例修改日志.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/9. 查看测试用例修改日志.md
@@ -1,1 +1,9 @@
-test
+### 3. 测试追踪
+
+#### 3.1 测试用例
+
+##### 3.1.2 测试用例
+
+##### 3.1.2.9 查看测试用例修改日志
+
+本节将为您介绍如何查看测试用例的修改日志。在修改日志列表，您不仅可以看到测试用例的所有修改日志，还可以通过单击“回滚到此版本”选项，将测试用例的当前版本回滚到指定版本；同时您也可以单击“日志比较”选项，进行测试用例的版本差异对比。
