--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/9. 查看测试用例修改日志.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/9. 查看测试用例修改日志.md
@@ -7,3 +7,13 @@
 ##### 3.1.2.9 查看测试用例修改日志
 
 本节将为您介绍如何查看测试用例的修改日志。在修改日志列表，您不仅可以看到测试用例的所有修改日志，还可以通过单击“回滚到此版本”选项，将测试用例的当前版本回滚到指定版本；同时您也可以单击“日志比较”选项，进行测试用例的版本差异对比。
+
+##### 3.1.2.9.1 操作步骤
+
+a）进入测试用例页面，选中测试用例，在操作列单击“更多 > 修改日志”，如图9-1所示：
+
+![9-1](https://www.feisuanyz.com/fstest/cszz/yongli_log_1.png)
+
+##### 图9-1 测试用例页面
+
+b）系统弹出修改日志列表，您可以看到该测试用例的所有修改日志，如图9-2所示：
