--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/9. 查看测试用例修改日志.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/2. 测试用例/9. 查看测试用例修改日志.md
@@ -17,3 +17,11 @@ a）进入测试用例页面，选中测试用例，在操作列单击“更多 
 ##### 图9-1 测试用例页面
 
 b）系统弹出修改日志列表，您可以看到该测试用例的所有修改日志，如图9-2所示：
+
+![9-2](https://www.feisuanyz.com/fstest/cszz/yongli_log_2.png)
+
+##### 图9-2 修改日志列表
+
+c）在修改日志列表，您可以单击“回滚到此版本”选项，将测试用例的当前版本回滚到指定版本。
+
+d）在修改日志列表，您也可以单击“日志比较”选项，进行测试用例的版本差异对比，如图9-3所示：
