--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/3. 脑图/1. 脑图展示与编辑测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/3. 脑图/1. 脑图展示与编辑测试用例.md
@@ -7,3 +7,11 @@
 ##### 3.1.3.1 脑图展示与编辑测试用例
 
 在全自动测试平台创建的测试用例不仅可以使用列表来展示与编辑，还支持脑图展示与编辑。
+
+通过使用脑图，用户可以在已有的测试用例模块下快速创建多条测试用例或多个测试用例模块；
+
+使用脑图创建测试用例时，用户可以为测试用例可视化添加前置条件、步骤以及备注信息，创建完成后保存，使用脑图创建的所有测试用例信息将同步显示在列表中；
+
+同时用户可以在脑图中直接查看到测试用例的状态，只有处于编辑中的测试用例才可在脑图中编辑修改，处于其他状态（如已提交、审核通过等）的测试用例均不能进行编辑修改操作。
+
+本节为您介绍如何查看以脑图展示的测试用例，以及如何使用脑图创建测试用例模块和测试用例。
