--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/3. 脑图/1. 脑图展示与编辑测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/3. 脑图/1. 脑图展示与编辑测试用例.md
@@ -15,3 +15,13 @@
 同时用户可以在脑图中直接查看到测试用例的状态，只有处于编辑中的测试用例才可在脑图中编辑修改，处于其他状态（如已提交、审核通过等）的测试用例均不能进行编辑修改操作。
 
 本节为您介绍如何查看以脑图展示的测试用例，以及如何使用脑图创建测试用例模块和测试用例。
+
+##### 3.1.3.1.1 查看以脑图展示的测试用例
+
+进入全自动测试平台，点击平台上方“测试用例”选项，选择“测试用例 > 脑图”，选中测试用例模块即可查看该模块下以脑图展示的所有测试用例。
+
+##### 说明：点击脑图中的圆形“+”号和“-”号可以展开或收起测试用例的相关内容。
+
+![1-1](https://www.feisuanyz.com/fstest/cszz/testyl/naotu_1.png)
+
+##### 图1-1 查看该模块下以脑图展示的所有测试用例
