--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/3. 脑图/1. 脑图展示与编辑测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/3. 脑图/1. 脑图展示与编辑测试用例.md
@@ -25,3 +25,11 @@
 ![1-1](https://www.feisuanyz.com/fstest/cszz/testyl/naotu_1.png)
 
 ##### 图1-1 查看该模块下以脑图展示的所有测试用例
+
+##### 3.1.3.1.2 使用脑图创建测试用例模块和测试用例
+
+a）脑图中的测试用例模块和测试用例分别以蓝色卡片和白色卡片显示，点击蓝色卡片（即测试用例模块）上方的方形“+”号即可选择创建测试用例模块或测试用例。
+
+![1-2](https://www.feisuanyz.com/fstest/cszz/testyl/naotu_2.png)
+
+##### 图1-2 创建测试用例模块或测试用例
