--- a/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/3. 脑图/1. 脑图展示与编辑测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/1. 测试用例/3. 脑图/1. 脑图展示与编辑测试用例.md
@@ -43,3 +43,15 @@ b）选择“模块”创建测试用例模块： 双击模块即可修改测试
 c）选择“用例”创建测试用例：
 
 c1）双击“用例”即可修改测试用例的名称。
+
+![1-4](https://www.feisuanyz.com/fstest/cszz/testyl/naotu_5.png)
+
+##### 图1-4 修改测试用例的名称
+
+c2）点击方形“+”号即可为测试用例添加前置条件、步骤及备注信息。
+
+![1-5](https://www.feisuanyz.com/fstest/cszz/testyl/naotu_3.png)
+
+##### 图1-5 为测试用例添加前置条件、步骤及备注信息
+
+c3）选择为测试用例添加步骤描述时，同时也可以为对应步骤添加预期结果。
