--- a/SoFlu全自动测试平台教程/3. 测试追踪/2. 测试用例评审/1. 查询待评审测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/2. 测试用例评审/1. 查询待评审测试用例.md
@@ -7,3 +7,11 @@
 本节主要介绍查询待评审测试用例的具体操作过程。
 
 ##### 3.2.1.1 操作步骤
+
+##### 注意：项目创建人及已授权的用户有权限查看待评审的测试用例、评论待评审的测试用例，但只有评审人有权限评审测试用例。
+
+a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fstest/cszz/pingshen/1.png)
+
+##### 图1-1 测试用例页面
