--- a/SoFlu全自动测试平台教程/3. 测试追踪/2. 测试用例评审/2. 评论测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/2. 测试用例评审/2. 评论测试用例.md
@@ -7,3 +7,11 @@
 创建项目的用户和项目被授权用户可以对已提交的测试用例进行评论，本节为您介绍评论测试用例的具体操作过程。
 
 ##### 3.2.2.1 操作步骤
+
+a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cszz/pingshen/pinglun_2_1.png)
+
+##### 图2-1 测试用例页面
+
+b）列表上方分为4个页签（全部用例、待我评审、评审通过和评审未通过），选择“待我评审”页签，该页面下将显示所有已提交可以进行评论和评审的测试用例。
