--- a/SoFlu全自动测试平台教程/3. 测试追踪/2. 测试用例评审/3. 评审测试用例.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/2. 测试用例评审/3. 评审测试用例.md
@@ -5,3 +5,11 @@
 ##### 3.2.3 评审测试用例
 
 已提交的测试用例需评审通过后才可以绑定测试场景，本节为您介绍评审测试用例的具体操作过程。
+
+##### 3.2.3.1 操作步骤
+
+a）测试用例提交后，进入待我评审测试用例列表，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cszz/pingshen/pingshen_3_1.png)
+
+##### 图3-1 测试用例页面
