--- a/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/2. 配置AccessKey.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/2. 配置AccessKey.md
@@ -7,3 +7,11 @@
 本节主要介绍如何配置AccessKey。
 
 ##### 1.4.2.1 前提条件
+
+您需要拥有主账号权限。
+
+##### 1.4.2.2 操作步骤
+
+a）使用主账号登录进行飞算SoFlu软件机器人控制台，单击右上角用户头像，选择“AccessKey管理”，系统显示AccessKey管理页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/xtpz/sysparams/accesskey_2.png)
