--- a/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/2. 配置AccessKey.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/2. 配置AccessKey.md
@@ -15,3 +15,11 @@
 a）使用主账号登录进行飞算SoFlu软件机器人控制台，单击右上角用户头像，选择“AccessKey管理”，系统显示AccessKey管理页面，如图2-1所示：
 
 ![2-1](https://www.feisuanyz.com/fstest/xtpz/sysparams/accesskey_2.png)
+
+##### 图2-1 AccessKey管理页面
+
+b）选择未到期的AccessKey ID，单击“查看Secret”即可查看AccessKey ID和AccessKey Secret值，单击“复制”即可进行复制，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fstest/xtpz/sysparams/accesskey_3.png)
+
+##### 图2-2 查看Secret窗口
