--- a/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/2. 配置AccessKey.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/2. 配置AccessKey.md
@@ -23,3 +23,9 @@ b）选择未到期的AccessKey ID，单击“查看Secret”即可查看AccessK
 ![2-2](https://www.feisuanyz.com/fstest/xtpz/sysparams/accesskey_3.png)
 
 ##### 图2-2 查看Secret窗口
+
+c）进入全自动测试平台系统参数页面，粘贴刚复制的AccessKey ID值和AccessKey Secret值，单击“保存”即可，如图2-3所示：
+
+![2-3](https://www.feisuanyz.com/fstest/xtpz/sysparams/accesskey_4.png)
+
+##### 图2-3 系统参数页面
