--- a/SoFlu全自动测试平台教程/3. 测试追踪/2. 测试用例评审/4. 查看评审记录.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/2. 测试用例评审/4. 查看评审记录.md
@@ -7,3 +7,9 @@
 本节主要介绍查看评审记录的具体操作过程。
 
 ##### 3.2.4.1 操作步骤
+
+a）进入测试用例页面，选择相应的测试用例模块，右侧页面将展示该模块下的测试用例列表，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cszz/pingshen/4.png)
+
+##### 图4-1 测试用例页面
