--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/1. 查询测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/1. 查询测试计划.md
@@ -1,1 +1,9 @@
-test
+### 3. 测试追踪
+
+#### 3.3 测试计划
+
+##### 3.3.1 基础概述
+
+a）测试计划是一次测试活动的最终结果，汇总了测试用例与性能测试。执行测试计划后，开始跑测试用例与性能测试，最终形成的报告结果汇总了两者的运行结果报告。
+
+b）测试计划第一次关联测试用例或性能测试的实际时间为当前关联时间。
