--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/1. 查询测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/1. 查询测试计划.md
@@ -7,3 +7,11 @@
 a）测试计划是一次测试活动的最终结果，汇总了测试用例与性能测试。执行测试计划后，开始跑测试用例与性能测试，最终形成的报告结果汇总了两者的运行结果报告。
 
 b）测试计划第一次关联测试用例或性能测试的实际时间为当前关联时间。
+
+##### 3.3.2 查询测试计划
+
+本节主要介绍查询测试计划的具体操作过程。
+
+##### 3.3.2.1 操作步骤
+
+a）进入全自动测试平台，在页面上方选择“测试计划”，进入测试计划页面，如图1-1所示：
