--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/2. 新增测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/2. 新增测试计划.md
@@ -5,3 +5,11 @@
 ##### 3.3.3 新增测试计划
 
 本节为您介绍新增测试计划的具体操作过程。在新增测试计划时，用户可以通过设置定时任务让测试计划按规定的时间执行。
+
+##### 3.3.3.1 操作步骤
+
+a）进入全自动测试平台，在页面上方选择“测试计划”，进入测试计划页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cszz/jihua/newcsjh_1.png)
+
+##### 图2-1 测试计划页面
