--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/2. 新增测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/2. 新增测试计划.md
@@ -21,3 +21,11 @@ b）单击测试计划列表上方的“+”按钮，选择“新增测试计划
 ##### 图2-2 新增测试计划页面
 
 c）填写测试计划的基本信息，单击“生成Cron”，根据实际需求配置定时任务的Cron表达式，如图2-3、2-4所示：
+
+##### 说明：
+
+##### c1）选择相应的环境配置后，该测试计划下所有关联的测试用例或性能测试计划都会在该配置环境下执行。
+
+##### c2）若需指定X时X分X秒执行性能测试计划，时分秒需同时选择指定，然后选择更具体的时间即可；您可以在下方预览页面预览最近10次运行时间来判断未来执行时间是否与预期一样，若不一样，说明设置的时间不正确，重新设置即可；图中示例设置的定时时间为每小时执行一次。
+
+##### 注意：进行定时任务设置时，系统会检验AccessKey是否填写，若未填写，用户需使用主账号在系统设置中配置好AccessKey后再进行相关操作，关于如何配置AccessKey可参见[《SoFlu全自动测试平台教程第1.4.2节：配置AccessKey》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/4.%20%E7%B3%BB%E7%BB%9F%E5%8F%82%E6%95%B0/2.%20%E9%85%8D%E7%BD%AEAccessKey.md)。
