--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/3. 修改测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/3. 修改测试计划.md
@@ -7,3 +7,9 @@
 本节主要介绍修改测试计划的具体操作过程。
 
 ##### 3.3.4.1 操作步骤
+
+a）进入测试计划页面，选中需修改的测试计划，单击修改按钮，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cszz/jihua/3.png)
+
+##### 图3-1 测试计划页面
