--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/4. 删除测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/4. 删除测试计划.md
@@ -5,3 +5,11 @@
 ##### 3.3.5 删除测试计划
 
 本节主要介绍删除测试计划的具体操作过程。
+
+##### 3.3.5.1 操作步骤
+
+##### 注意：运作中的测试计划不能删除。
+
+a）进入测试计划页面，选中需删除的测试计划，单击删除按钮，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cszz/jihua/4.png)
