--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/4. 删除测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/4. 删除测试计划.md
@@ -13,3 +13,7 @@
 a）进入测试计划页面，选中需删除的测试计划，单击删除按钮，如图4-1所示：
 
 ![4-1](https://www.feisuanyz.com/fstest/cszz/jihua/4.png)
+
+##### 图4-1 测试计划页面
+
+b）系统弹出提示信息，单击“确定”即可。
