--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/6. 关联性能测试.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/6. 关联性能测试.md
@@ -7,3 +7,11 @@
 本节主要介绍如何对测试计划进行关联性能测试操作的具体过程。
 
 ##### 3.3.7.1 操作步骤
+
+##### 注意：只有运行完成的性能测试才可以关联测试计划。
+
+a）进入测试计划页面，选择测试计划，右侧页面显示测试计划的详细信息，如图6-1所示：
+
+![6-1](https://www.feisuanyz.com/fstest/cszz/jihua/7.png)
+
+##### 图6-1 测试计划页面
