--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/7. 启动测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/7. 启动测试计划.md
@@ -1,1 +1,11 @@
-test
+### 3. 测试追踪
+
+#### 3.3 测试计划
+
+##### 3.3.8 启动测试计划
+
+本节主要介绍启动测试计划的具体操作过程。
+
+##### 3.3.8.1 操作步骤
+
+a）进入测试计划页面，选择测试计划，右侧页面显示测试计划的详细信息，如图7-1所示：
