--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/9. 新增精准回归测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/9. 新增精准回归测试计划.md
@@ -1,1 +1,9 @@
-test
+### 3. 测试追踪
+
+#### 3.3 测试计划
+
+##### 3.3.10 新增精准回归测试计划
+
+通过创建精准回归测试计划，选择所关联的项目，可以自动添加关联项目下所有接口的测试用例，无需手动添加测试用例。本节将为您具体介绍如何新增精准回归测试计划。
+
+##### 3.3.10.1 前提条件
