--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/9. 新增精准回归测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/9. 新增精准回归测试计划.md
@@ -7,3 +7,13 @@
 通过创建精准回归测试计划，选择所关联的项目，可以自动添加关联项目下所有接口的测试用例，无需手动添加测试用例。本节将为您具体介绍如何新增精准回归测试计划。
 
 ##### 3.3.10.1 前提条件
+
+a）需先在接口管理中关联所需项目，关于如何关联项目可参见文档测试场景4-1-2-8关联全自动开发平台项目，本节关联的项目如图9-1所示：
+
+![9-1](https://www.feisuanyz.com/fstest/cszz/jihua/accurate_1.png)
+
+##### 图9-1 本节关联项目
+
+b）需将已关联项目下的接口绑定测试场景，并执行该测试场景，关于如何给测试场景绑定接口以及执行测试场景，可参见文档4-3测试场景管理，本节绑定的测试用例及测试场景下的接口如图9-2所示：
+
+![9-2](https://www.feisuanyz.com/fstest/cszz/jihua/accurate_2.png)
