--- a/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/9. 新增精准回归测试计划.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/3. 测试计划/9. 新增精准回归测试计划.md
@@ -35,3 +35,13 @@ b）单击页面左侧“+”按钮，选择“新增精准回归测试计划”
 ##### 图9-4 新增测试计划页面
 
 c）选择相应的环境配置，单击“下一步”，系统弹出关联全自动开发平台项目页面，如图9-5所示：
+
+![9-5](https://www.feisuanyz.com/fstest/cszz/jihua/accurate_5.png)
+
+##### 图9-5 关联全自动开发平台项目页面
+
+d）勾选所需关联的项目，单击“下一步”，可以看到该项目下接口的测试用例已自动显示在已关联测试用例列表中，如图9-6所示：
+
+![9-6](https://www.feisuanyz.com/fstest/cszz/jihua/accurate_6.png)
+
+##### 图9-6 新增完成
