--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/1. 集成缺陷管理平台.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/1. 集成缺陷管理平台.md
@@ -25,3 +25,13 @@ b）版本需为开源版12.5.3以上。
 a）在禅道安装目录/xampp/zentao/config/下，找到my.php文件，添加内容“$config->features->apiGetModel = true;”，如图1-1所示：
 
 ##### 说明：若没有找到my.php文件，在/xampp/zentao/config/目录下自行创建一个即可。
+
+![1-1](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_2_1.png)
+
+##### 图1-1 修改my.php文件
+
+b）使用系统管理员账号登录禅道系统，单击页面上方“组织 > 权限”，进入权限分组页面，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_2_2.png)
+
+##### 图1-2 禅道权限分组页面
