--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/1. 集成缺陷管理平台.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/1. 集成缺陷管理平台.md
@@ -35,3 +35,15 @@ b）使用系统管理员账号登录禅道系统，单击页面上方“组织 
 ![1-2](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_2_2.png)
 
 ##### 图1-2 禅道权限分组页面
+
+c）选择管理员分组，单击“权限维护”选项，进入管理员所有权限页面，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_2_3.png)
+
+##### 图1-3 管理员所有权限页面
+
+d）下拉页面，找到API接口行，勾选“超级model调用接口”，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_2_4.png)
+
+##### 图1-4 勾选超级model调用接口
