--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/1. 集成缺陷管理平台.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/1. 集成缺陷管理平台.md
@@ -55,3 +55,13 @@ e）再次下拉页面到底部，单击“保存”即可，如图1-5所示：
 ##### 图1-5 保存权限设置
 
 f）进入全自动测试平台，单击页面右上角系统设置按钮，进入系统设置页面，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_2_6.png)
+
+##### 图1-6 系统设置页面
+
+g）单击“服务 > 缺陷集成”，选择禅道，输入禅道的账号、密码以及地址信息。
+
+h）输入完成后，单击“测试连接”。
+
+i）系统提示连接成功，说明集成禅道成功，单击“保存”即可。
