--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
@@ -7,3 +7,13 @@
 用户可以根据需要通过自定义字段创建自己的缺陷模板，本节将为您具体介绍如何创建缺陷模板。
 
 ##### 3.4.3.1 操作步骤
+
+创建缺陷模板主要分为以下两步：
+
+a）自定义缺陷模板字段
+
+b）创建缺陷模板
+
+##### 3.4.3.2 自定义缺陷模板字段
+
+a）进入全自动测试平台，单击页面右上角系统设置按钮，进入系统设置页面，如图2-1所示：
