--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
@@ -17,3 +17,15 @@ b）创建缺陷模板
 ##### 3.4.3.2 自定义缺陷模板字段
 
 a）进入全自动测试平台，单击页面右上角系统设置按钮，进入系统设置页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_1.png)
+
+##### 图2-1 系统设置页面
+
+b）选择“服务 > 模板管理 > 自定义字段”，单击“创建字段”进入创建字段页面，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_2.png)
+
+##### 图2-2 创建字段页面
+
+c）输入字段名，选择字段类型，单击“确定”即可。
