--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
@@ -43,3 +43,15 @@ c）输入字段名，选择字段类型，单击“确定”即可。
 ![2-4](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_4.png)
 
 ##### 图2-4 设置下拉列表的键和值
+
+![2-5](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_9.png)
+
+##### 图2-5 禅道系统的键与值
+
+![2-6](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_5.png)
+
+##### 图2-6 示例-设置优先级
+
+![2-7](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_6.png)
+
+##### 图2-7 示例-设置严重程度
