--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
@@ -55,3 +55,13 @@ c）输入字段名，选择字段类型，单击“确定”即可。
 ![2-7](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_6.png)
 
 ##### 图2-7 示例-设置严重程度
+
+##### 3.4.3.3 创建缺陷模板
+
+a）自定义完缺陷模板字段之后，单击“模板管理 > 缺陷模板管理”，进入缺陷模板管理页面，如图2-8所示：
+
+![2-8](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_7.png)
+
+##### 图2-8 缺陷模板管理页面
+
+b）单击“创建缺陷模板”，进入新增缺陷模板页面，填写模板相关信息，如图2-9所示：
