--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/2. 创建缺陷模板.md
@@ -75,3 +75,15 @@ c）单击“添加字段”，进入选择自定义字段页面，如图2-10所
 ![2-10](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_11.png)
 
 ##### 图2-10 选择自定义字段页面
+
+d）勾选所需的自定义字段，单击“确定”。
+
+e）添加完字段之后，可以为字段设置默认值、API字段名以及是否必填选项，如图2-11所示：
+
+##### 说明：
+
+##### API字段名需与禅道配置中的API字段名保持一致，否则在禅道无法显示对应的值。
+
+##### API字段名查看方法：找到禅道的安装目录（例如：E:\xampp\zentao\module\bug\lang），打开zh-cn.php文件查看，如图2-11所示严重程度和优先级的API字段名分别为severity、pri。
+
+![2-11](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_3_12.png)
