--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/3. 创建缺陷.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/3. 创建缺陷.md
@@ -1,1 +1,15 @@
-test
+### 3. 测试追踪
+
+#### 3.4 缺陷管理
+
+##### 3.4.4 创建缺陷
+
+缺陷，就是通常所说的bug，当测试用例出现问题时，用户可以通过创建缺陷对问题进行及时记录和管理。本节将为您具体介绍如何创建缺陷。
+
+##### 3.4.4.1 前提条件
+
+a）所在项目已集成好缺陷管理平台，具体可参见[《SoFlu全自动测试平台教程第3.4.2节：集成缺陷管理平台》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%B5%8B%E8%AF%95%E8%BF%BD%E8%B8%AA/4.%20%E7%BC%BA%E9%99%B7%E7%AE%A1%E7%90%86/1.%20%E9%9B%86%E6%88%90%E7%BC%BA%E9%99%B7%E7%AE%A1%E7%90%86%E5%B9%B3%E5%8F%B0.md)。
+
+b）所在项目已创建好需要的缺陷模板，并已选择好对应的缺陷模板和禅道项目ID，具体可参见[《SoFlu全自动测试平台教程第2.1.2节：新建项目》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1.%20%E6%96%B0%E5%BB%BA%E9%A1%B9%E7%9B%AE.md)以及[《SoFlu全自动测试平台教程第3.4.3节：创建缺陷模板》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%B5%8B%E8%AF%95%E8%BF%BD%E8%B8%AA/4.%20%E7%BC%BA%E9%99%B7%E7%AE%A1%E7%90%86/2.%20%E5%88%9B%E5%BB%BA%E7%BC%BA%E9%99%B7%E6%A8%A1%E6%9D%BF.md)。
+
+##### 3.4.4.2 操作步骤
