--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/4. 提交缺陷.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/4. 提交缺陷.md
@@ -5,3 +5,11 @@
 ##### 3.4.5 提交缺陷
 
 创建好缺陷后，用户可通过提交缺陷将对应的缺陷同步到禅道系统上，在禅道系统用户可以对缺陷进行编辑、处理等相关操作。本节为您具体介绍如何提交缺陷。
+
+##### 3.4.5.1 前提条件
+
+所在项目已存在创建好的缺陷。
+
+##### 3.4.5.2 操作步骤
+
+a）在缺陷管理页面，单击需提交缺陷所在行的“提交”按钮，如图4-1所示：
