--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/4. 提交缺陷.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/4. 提交缺陷.md
@@ -13,3 +13,11 @@
 ##### 3.4.5.2 操作步骤
 
 a）在缺陷管理页面，单击需提交缺陷所在行的“提交”按钮，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_5_1.png)
+
+##### 图4-1 缺陷管理页面
+
+b）系统提示是否确认提交，单击“确认”即可，如图4-2所示：
+
+![4-2](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_5_2.png)
