--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/5. 同步缺陷信息.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/5. 同步缺陷信息.md
@@ -7,3 +7,13 @@
 用户在全自动测试平台提交缺陷之后，可以在禅道系统对提交的缺陷进行管理。当禅道系统上缺陷的信息出现修改或状态发生变化时，用户可以通过在全自动测试平台同步缺陷信息以了解当前缺陷的最新信息和状态。本节将为您具体介绍如何同步缺陷信息。
 
 ##### 3.4.6.1 前提条件
+
+所在项目已存在已提交的缺陷。
+
+##### 3.4.6.2 操作步骤
+
+a）在缺陷管理页面，可以看到当前缺陷的状态为“已提交”，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_6_1.png)
+
+##### 图5-1 缺陷管理页面
