--- a/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/5. 同步缺陷信息.md
+++ b/SoFlu全自动测试平台教程/3. 测试追踪/4. 缺陷管理/5. 同步缺陷信息.md
@@ -23,3 +23,9 @@ b）进入禅道系统，将对应缺陷状态修改为“已解决”，如图5
 ![5-2](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_6_2.png)
 
 ##### 图5-2 缺陷管理页面
+
+c）进入全自动测试平台缺陷管理页面，单击页面上面“同步缺陷信息”选项，可以看到对应缺陷的状态也变化为“已解决”，说明同步缺陷信息成功，如图5-3所示：
+
+![5-3](https://www.feisuanyz.com/fstest/cszz/bugmanage/bug_6_3.png)
+
+##### 图5-3 同步缺陷信息成功
