--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/1. 接口模块/1. 新建接口模块.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/1. 接口模块/1. 新建接口模块.md
@@ -7,3 +7,11 @@
 ##### 4.1.1.1 基础概述
 
 a）接口是测试场景中的主要构成元素，事先定义好接口有利于高效地编写测试场景。
+
+b）接口进行环境配置之后才能执行测试，输入请求路径、请求参数测试值，点击测试，响应内容会展示响应头、响应体、响应时间等信息。
+
+c）接口每次修改后系统会保留修改日志，修改日志可以对比不同版本的接口、了解不同版本间的差异。接口一旦被测试场景绑定，修改接口、导入覆盖接口时，系统会提示当前操作会影响多少个未提交的测试场景。确定修改后，修改的信息同步到测试场景中，但已提交的测试场景不受影响。
+
+d）接口管理中允许用户将指定的接口文件导出，同时导入到其它测试项目。
+
+##### 4.1.1.2 新建接口模块
