--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/1. 接口模块/2. 修改接口模块.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/1. 接口模块/2. 修改接口模块.md
@@ -7,3 +7,11 @@
 ##### 4.1.1.3 修改接口模块
 
 本节介绍修改接口模块的具体操作过程。
+
+##### 4.1.1.3.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cscj/jkgl/2.png)
+
+##### 图2-1 接口管理页面
