--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/1. 接口模块/3. 删除接口模块.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/1. 接口模块/3. 删除接口模块.md
@@ -7,3 +7,11 @@
 ##### 4.1.1.4 删除接口模块
 
 本节介绍删除接口模块的具体操作过程。
+
+##### 4.1.1.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cscj/jkgl/3.png)
+
+##### 图3-1 接口管理页面
