--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/1. 新增接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/1. 新增接口.md
@@ -10,3 +10,10 @@
 
 ##### 4.1.2.1.1 操作步骤
 
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fstest/cscj/jkgl/4.png)
+
+##### 图1-1 接口管理页面
+
+b）选中需新增接口的接口模块，右侧页面将显示该模块下的接口列表，单击“新增测试接口”，系统弹出新增接口页面，如图1-2所示：
