--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/2. 修改接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/2. 修改接口.md
@@ -5,3 +5,11 @@
 ##### 4.1.2 接口
 
 ##### 4.1.2.2 修改接口
+
+本节介绍修改接口的具体操作过程。
+
+##### 4.1.2.2.1 操作步骤
+
+##### 说明：若需修改的接口已与测试场景绑定，修改时系统会弹出提示信息，确定修改后，系统会将修改的信息同步到未提交的测试场景。
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图2-1所示：
