--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/2. 修改接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/2. 修改接口.md
@@ -13,3 +13,11 @@
 ##### 说明：若需修改的接口已与测试场景绑定，修改时系统会弹出提示信息，确定修改后，系统会将修改的信息同步到未提交的测试场景。
 
 a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cscj/jkgl/6.png)
+
+##### 图2-1 接口管理页面
+
+b）选中需修改接口的接口模块，右侧页面将显示该模块下的接口列表，选中需修改的接口，单击修改按钮。
+
+c）系统弹出修改接口页面，对相关内容进行修改之后，单击“保存”即可。
