--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/3. 删除接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/3. 删除接口.md
@@ -7,3 +7,11 @@
 ##### 4.1.2.3 删除接口
 
 本节介绍删除接口的具体操作过程。
+
+##### 4.1.2.3.1 操作步骤
+
+##### 说明：若需删除接口已与测试场景绑定，则无法删除，需解除绑定后再进行删除操作。
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cscj/jkgl/7.png)
