--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/3. 删除接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/3. 删除接口.md
@@ -15,3 +15,9 @@
 a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图3-1所示：
 
 ![3-1](https://www.feisuanyz.com/fstest/cscj/jkgl/7.png)
+
+##### 图3-1 接口管理页面
+
+b）选中需删除接口的接口模块，右侧页面将显示该模块下的接口列表，选中需删除的接口，单击删除按钮。
+
+c）系统弹出提示信息，单击“确定”即可。
