--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/4. 测试接口运行.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/4. 测试接口运行.md
@@ -5,3 +5,13 @@
 ##### 4.1.2 接口
 
 ##### 4.1.2.4 测试接口运行
+
+本节介绍测试接口运行的具体操作过程。
+
+##### 4.1.2.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cscj/jkgl/6.png)
+
+##### 图4-1 接口管理页面
