--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/5. 导出接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/5. 导出接口.md
@@ -5,3 +5,15 @@
 ##### 4.1.2 接口
 
 ##### 4.1.2.5 导出接口
+
+本节介绍导出接口的具体操作过程。
+
+##### 4.1.2.5.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fstest/cscj/jkgl/9.png)
+
+##### 图5-1 接口管理页面
+
+b）单击“导出接口”选项，系统弹出导出接口页面，如图5-2所示：
