--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/6. 导入接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/6. 导入接口.md
@@ -5,3 +5,15 @@
 ##### 4.1.2 接口
 
 ##### 4.1.2.6 导入接口
+
+本节介绍导入接口的具体操作过程。
+
+##### 4.1.2.6.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图6-1所示：
+
+![6-1](https://www.feisuanyz.com/fstest/cscj/jkgl/10_1.png)
+
+##### 图6-1 接口管理页面
+
+b）单击“导入接口”选项，系统弹出导入接口页面，如图6-2所示：
