--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/7. 查看项目接口导入记录.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/7. 查看项目接口导入记录.md
@@ -5,3 +5,13 @@
 ##### 4.1.2 接口
 
 ##### 4.1.2.7 查看项目接口导入记录
+
+本节介绍查看项目接口导入记录的具体操作过程。
+
+##### 4.1.2.7.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图7-1所示：
+
+![7-1](https://www.feisuanyz.com/fstest/cscj/jkgl/12.png)
+
+##### 图7-1 接口管理页面
