--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/8. 关联全自动开发平台项目.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/8. 关联全自动开发平台项目.md
@@ -7,3 +7,11 @@
 ##### 4.1.2.8 关联全自动开发平台项目
 
 本节介绍全自动测试平台项目关联全自动开发平台项目的具体操作过程。
+
+##### 4.1.2.8.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 接口管理”，进入接口管理页面，如图8-1所示：
+
+![8-1](https://www.feisuanyz.com/fstest/cscj/jkgl/13_1.png)
+
+##### 图8-1 接口管理页面
