--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/0. 什么是全自动开发平台/0. 什么是全自动开发平台.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/0. 什么是全自动开发平台/0. 什么是全自动开发平台.md
@@ -7,3 +7,13 @@
 #### 产品四大技术优势：
 
 a）可视化配置实现业务逻辑
+
+改变传统编写代码开发方法，通过拖拽方式以及参数配置实现等同于编写复杂代码的业务逻辑，业务逻辑可视化展示，极大地降低开发门槛，在设计业务逻辑时就形成微服务应用。
+
+b）丰富的组件库
+
+平台提供大量组件库，比如SQL组件，事务组件，上传组件，下载组件，子流程组件，赋值组件，函数组件，Mongo组件，Redis组件，HTTP组件等。
+
+支持用户根据自身需求开发自定义组件，丰富组件库，减少重复造轮子，提升重用性和开发效率。
+
+c）可视化执行日志
