--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/0. 什么是全自动开发平台/0. 什么是全自动开发平台.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/0. 什么是全自动开发平台/0. 什么是全自动开发平台.md
@@ -17,3 +17,17 @@ b）丰富的组件库
 支持用户根据自身需求开发自定义组件，丰富组件库，减少重复造轮子，提升重用性和开发效率。
 
 c）可视化执行日志
+
+提供接口级的单元测试能力，通过在可视化日志里查看整个接口的执行过程和中间节点数据，极大地提高了测试效率。
+
+d）仿真测试
+
+定义接口参数值并运行，可视化执行结果，快速定位问题，告别Debug逐行调试定位问题。系统提供丰富的组件库，集成1000余个插件。
+
+#### 产品特点：
+
+平台使用超轻松便利、上手零负担、助力企业高效率、低成本开发应用软件。
+
+##### 0.1.1 平台全景图
+
+![0-1](https://www.feisuanyz.com/fsimage/ks-image/ks_0-1_img.png)
