--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/0. 什么是全自动开发平台/0. 什么是全自动开发平台.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/0. 什么是全自动开发平台/0. 什么是全自动开发平台.md
@@ -31,3 +31,17 @@ d）仿真测试
 ##### 0.1.1 平台全景图
 
 ![0-1](https://www.feisuanyz.com/fsimage/ks-image/ks_0-1_img.png)
+
+##### 图0-1 平台全景图
+
+##### 0.1.2 工具介绍
+
+平台菜单区：主要包括项目管理、配置中心、系统配置、组件列表、数据库配置、插件中心、函数库中心、扩展JAR包。
+
+平台项目搜索区：主要用于查询在平台上创建的具体名称，实时展示动态搜索的结果条件。
+
+平台项目开发区：以卡片形式展示在平台创建的开发项目的集合。
+
+平台日志区：主要包括平台的应用服务日志、操作日志、测试用例日志、修改日志。
+
+平台其它区：主要平台应用服务器、平台登录账户、平台帮助、开发辅助工具。
