--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/0. 什么是全自动开发平台/0. 什么是全自动开发平台.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/0. 什么是全自动开发平台/0. 什么是全自动开发平台.md
@@ -45,3 +45,25 @@ d）仿真测试
 平台日志区：主要包括平台的应用服务日志、操作日志、测试用例日志、修改日志。
 
 平台其它区：主要平台应用服务器、平台登录账户、平台帮助、开发辅助工具。
+
+##### 0.1.3 平台模块功能界面
+
+![0-2](https://www.feisuanyz.com/fsimage/ks-image/ks_02.png)
+
+##### 图0-2 平台模块功能界面
+
+平台模块功能说明：
+
+a）配置中心：主要用于接入平台项目开发的环境和需要导入的资源，其中接入的环境在“数据中心”集中管理；导入的资源在“资源中心”集中管理。
+
+b）系统配置：主要用于平台系统的全局配置的具体事项，例如：配置某个功能的标准配置项等。
+
+c）组件列表：组件是平台项目的开发的核心功能，开发者可以使用平台级的组件进行开发，也可以通过定义组件的方式上传至平台进行使用。
+
+d）数据库配置：主要用于全局定义开发项目时所使用到的数据库，包括数据库的定义、数据类型的定义、数据列的定义。
+
+e）插件中心：主要用于开发工程师可以将编写好的插件打包为一个Jar包，然后上传至平台使用。
+
+d）函数库中心：主要用于开发工程师可以将编写好的函数打包为一个Jar包，然后上传至平台使用。
+
+e）扩展JAR包：主要用于开发工程师可以将编写好的扩展JAR打包为一个Jar包，然后上传至平台使用。
