--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/9. 查看接口修改日志.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/9. 查看接口修改日志.md
@@ -5,3 +5,9 @@
 ##### 4.1.2 接口
 
 ##### 4.1.2.9 查看接口修改日志
+
+本节将为您介绍如何查看接口的修改日志。在修改日志列表，您不仅可以看到接口的所有修改日志，还可以通过单击“回滚到此版本”选项，将接口的当前版本回滚到指定版本；同时您也可以单击“日志比较”选项，进行接口的版本差异对比。
+
+##### 4.1.2.9.1 操作步骤
+
+a）进入全自动测试平台，选择页面上方“测试场景 > 接口管理”，进入接口管理页面，如图9-1所示：
