--- a/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/9. 查看接口修改日志.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/1. 接口管理/2. 接口/9. 查看接口修改日志.md
@@ -11,3 +11,9 @@
 ##### 4.1.2.9.1 操作步骤
 
 a）进入全自动测试平台，选择页面上方“测试场景 > 接口管理”，进入接口管理页面，如图9-1所示：
+
+![9-1](https://www.feisuanyz.com/fstest/cscj/jkgl/jiekou_log_1.png)
+
+##### 图9-1 接口管理页面
+
+b）选中接口，在操作列单击“更多 > 修改日志”，如图9-2所示：
