--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/1. 查询数据源.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/1. 查询数据源.md
@@ -1,1 +1,16 @@
-test
+### 4. 测试场景
+
+#### 4.2 数据集管理
+
+##### 4.2.1 SQL管理
+
+##### 4.2.1.1 数据源
+
+##### 4.2.1.1.1 基础概述
+
+SQL管理用于作为测试场景填写数据的数据源，测试场景的每个变量可以选择哪一个SQL里的哪一列哪一行作为数据。
+
+##### 4.2.1.1.2 查询数据源
+
+本节介绍查询数据源的具体操作过程。
+
