--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
@@ -1,1 +1,11 @@
-test
+### 1. 注册账户
+
+#### 1.1 安装本地客户端
+
+本节主要介绍社区版和商用版安装本地客户端的具体操作方法。
+
+##### 注意：
+
+a）注册使用社区版之前需要先[安装本地客户端](https://main.feisuanyz.com:8080/flow-community/feisuanyz-local-engine.zip)，商用版则可以选择是否安装本地客户端，是否安装本地客户端不影响商用版的[注册使用](https://www.feisuanyz.com/)。
+
+b）一个本地客户端只能同时登录一个账号。
