--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
@@ -9,3 +9,15 @@
 a）注册使用社区版之前需要先[安装本地客户端](https://main.feisuanyz.com:8080/flow-community/feisuanyz-local-engine.zip)，商用版则可以选择是否安装本地客户端，是否安装本地客户端不影响商用版的[注册使用](https://www.feisuanyz.com/)。
 
 b）一个本地客户端只能同时登录一个账号。
+
+##### 1.1.1 关于本地客户端
+
+本地客户端用于实现用户将平台上开发的项目部署到自己的本地主机上，主要解决以下问题：
+
+a）网络问题，比如用户的数据库是部署在自己公司内网的，平台上无法进行连接，这时通过启动本地客户端，用户就可以访问公司内网的数据库，解决了网络通讯问题。
+
+b）安全问题，比如用户的数据库账号、密码等安全性要求较高的信息，不允许暴露在开发平台上，这时通过启动本地客户端，这些安全性较高的信息只会存在于用户的本地主机上。
+
+c）效率问题，由于平台的负载能力是有限的，用户将自己的本地主机作为运行服务器，也可以提升响应速度。
+
+##### 1.1.2 前提条件
