--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
@@ -41,3 +41,13 @@ a）社区版下载步骤：
 a1-1）访问[飞算云智GitHub社区官方网站](https://github.com/feisuanyz/SoFlu-adp)或[飞算云智Gitee社区官方网站](https://gitee.com/feisuanyz/SoFlu-adp)
 
 a1-2）浏览网站的README.md文档，如图1-1、图1-2所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ksrm_1_1.png)
+
+##### 图1-1 GitHub社区README.md文档
+
+![1-2](https://www.feisuanyz.com/fsimage/ks-image/ksrm_1_2.png)
+
+##### 图1-2 Gitee社区README.md文档
+
+a1-3）滑动滚动条至最下方，在技术文档的社区版入口中，单击“本地客户端”，下载本地客户端安装包保存至本地PC，如图1-3所示：
