--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
@@ -51,3 +51,13 @@ a1-2）浏览网站的README.md文档，如图1-1、图1-2所示：
 ##### 图1-2 Gitee社区README.md文档
 
 a1-3）滑动滚动条至最下方，在技术文档的社区版入口中，单击“本地客户端”，下载本地客户端安装包保存至本地PC，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/ks-image/ksrm_1_3.png)
+
+##### 图1-3 下载入口
+
+b）商用版下载步骤：
+
+b1-1）注册登录平台商用版，具体参见下述《1.3 注册商用版》。
+
+b1-2）进入飞算云智平台页面，单击右上角“控制台”，如图1-4所示：
