--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
@@ -61,3 +61,13 @@ b）商用版下载步骤：
 b1-1）注册登录平台商用版，具体参见下述《1.3 注册商用版》。
 
 b1-2）进入飞算云智平台页面，单击右上角“控制台”，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/ks-image/ksrm_1_4.png)
+
+##### 图1-4 飞算云智平台页面
+
+b1-3）进入控制台页面，单击“进入平台”，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/ks-image/ksrm_1_5.png)
+
+##### 图1-5 控制台页面
