--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
@@ -71,3 +71,15 @@ b1-3）进入控制台页面，单击“进入平台”，如图1-5所示：
 ![1-5](https://www.feisuanyz.com/fsimage/ks-image/ksrm_1_5.png)
 
 ##### 图1-5 控制台页面
+
+b1-4）进入全自动开发平台页面，单击右上角下载按钮，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/ks-image/ksrm_1_6.png)
+
+##### 图1-6 全自动开发平台页面
+
+b1-5）进入全自动开发平台页面，单击右上角下载按钮，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/ks-image/ksrm_1_7.png)
+
+##### 图1-7 开发辅助工具页面
