--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
@@ -83,3 +83,15 @@ b1-5）进入全自动开发平台页面，单击右上角下载按钮，如图1
 ![1-7](https://www.feisuanyz.com/fsimage/ks-image/ksrm_1_7.png)
 
 ##### 图1-7 开发辅助工具页面
+
+##### 1.1.5 解压并启动本地客户端
+
+a）（如果是Windows系统，则执行此步骤）找到下载的客户端安装包，进行解压，双击startup.bat运行启动本地客户端，如图1-8所示：
+
+![1-8](https://www.feisuanyz.com/fsimage/ks-image/ks_17-07_img.png)
+
+##### 图1-8 启动本地客户端服务器
+ 
+##### 说明：a1）本地客户端默认不需要配置任何内容，启动端口默认为` 8080 `，日志文件默认存储到当前安装包目录下面的` logs `文件夹中
+
+##### a2）若安装包为` feisuanyz-local-engine-1.0.3 `，则日志生成路径是` feisuanyz-local-engine-1.0.3/logs `。
