--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
@@ -95,3 +95,18 @@ a）（如果是Windows系统，则执行此步骤）找到下载的客户端安
 ##### 说明：a1）本地客户端默认不需要配置任何内容，启动端口默认为` 8080 `，日志文件默认存储到当前安装包目录下面的` logs `文件夹中
 
 ##### a2）若安装包为` feisuanyz-local-engine-1.0.3 `，则日志生成路径是` feisuanyz-local-engine-1.0.3/logs `。
+
+##### a3）若需修改端口、日志存放路径配置，您需要创建一个` application.yml `文件，该文件需要与` feisuanyz-local-engine.jar `文件存放到同一目录中。
+
+`application.yml `文件创建模板如下：
+
+```
+server:
+ # 服务端口
+port: 8080
+
+# 系统日志配置
+logging:
+    file:
+        path: /logs
+
