--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.1 安装本地客户端.md
@@ -126,3 +126,15 @@ fs:
         topic: flow-system-logs
 
 ```
+
+##### 注意：` application.yml `文件中日志的存储方式只能选择一种。
+
+b）（如果是Windows系统，则执行此步骤）startup.bat启动完成后，系统会自动生成log_info.log日志文件，出现如图1-9所示日志信息，本地客户端启动成功说明本次安装完成：
+
+![1-9](https://www.feisuanyz.com/fsimage/ks-image/ks_17-08_img.png)
+
+##### 图1-9 查看日志信息
+
+c）（如果是Linux系统，则执行此步骤）上传安装包至目标服务器并解压、添加执行脚本执行权限，执行startup.sh启动本地客户端，如图1-10所示：
+
+![1-10](https://www.feisuanyz.com/fsimage/ks-image/ks_17-09_img.png)
