--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.2 注册社区版.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.2 注册社区版.md
@@ -1,1 +1,11 @@
-test
+### 1. 注册账户
+
+#### 1.2 注册社区版
+
+全自动开发平台社区版可供非企业或开源开发者们免费访问，其功能有一定的限制，具体可点击平台版本查看。本节主要介绍注册并登录社区版的具体操作方法。
+
+##### 1.2.1 前提条件
+
+您需要安装好本地客户端，并将本地客户端启动成功。
+
+##### 注意：社区版账号与商用版（正式版）账号不可共用，若您需要登录使用平台社区版，请注册社区版账号后使用社区版账号进行登录。
