--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.2 注册社区版.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.2 注册社区版.md
@@ -9,3 +9,13 @@
 您需要安装好本地客户端，并将本地客户端启动成功。
 
 ##### 注意：社区版账号与商用版（正式版）账号不可共用，若您需要登录使用平台社区版，请注册社区版账号后使用社区版账号进行登录。
+
+##### 1.2.2 操作步骤
+
+a）打开浏览器，在地址栏中输入http://服务器地址:服务端口（例如输入http://10.10.10.11:8080），并按“Enter”键，进入社区版登录页面，如图1-12所示：
+
+##### 注意：a）“服务器地址”为当前部署Local客户端的服务器IP地址；b）“端口”默认为8080，若自定义端口，请填写自定义端口。
+
+![1-12](https://www.feisuanyz.com/fsimage/ks-image/ks_17-14_img.png)
+
+##### 图1-12 登录页面
