--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.2 注册社区版.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.2 注册社区版.md
@@ -25,3 +25,11 @@ b）单击“免费注册”，系统显示社区版注册页面，如图1-13所
 ![1-13](https://www.feisuanyz.com/fsimage/ks-image/ks_17-15_img.png)
 
 ##### 图1-13 注册页面
+
+c）请根据实际输入注册的基本信息，滑动滚动条验证通过后，再单击“同意条款并注册”，如图1-14所示：
+
+![1-14](https://www.feisuanyz.com/fsimage/ks-image/ks_17-16_img.png)
+
+##### 图1-14 输入注册用户信息
+
+d）输入注册的手机号验证码，单击“确认”，如图1-15所示：
