--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.3 注册商用版.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.3 注册商用版.md
@@ -1,1 +1,9 @@
-test
+### 1. 注册账户
+
+#### 1.3 注册商用版
+
+全自动开发平台商用版也称正式版，供购买平台账号的企业用户或个人用户使用，其功能没有任何限制。本节主要介绍注册并登录商用版的具体操作方法。
+
+##### 1.3.1 操作步骤
+
+a）打开浏览器，输入飞算云智官网地址（https://www.feisuanyz.com），如图1-17所示：
