--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.3 注册商用版.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.3 注册商用版.md
@@ -7,3 +7,13 @@
 ##### 1.3.1 操作步骤
 
 a）打开浏览器，输入飞算云智官网地址（https://www.feisuanyz.com），如图1-17所示：
+
+![1-17](https://www.feisuanyz.com/fsimage/ks-image/ks_18-01_img.png)
+
+##### 图1-17 登录官网
+
+b）单击“注册”进入“会员注册”页面，如图1-18所示：
+
+![1-18](https://www.feisuanyz.com/fsimage/ks-image/ks_18-02_img.png)
+
+##### 图1-18 注册页面
