--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/2. 新增数据源.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/2. 新增数据源.md
@@ -13,3 +13,11 @@
 ##### 4.2.1.1.3.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cscj/datamanage/sqlmanage/2_1.png)
+
+##### 图2-1 SQL管理页面
+
+b）单击数据库连接列表旁的“+”按钮，系统弹出新增数据库连接页面，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fstest/cscj/datamanage/sqlmanage/2_2.png)
