--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/3. 修改数据源.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/3. 修改数据源.md
@@ -11,3 +11,9 @@
 本节介绍修改数据源的具体操作过程。
 
 ##### 4.2.1.1.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cscj/datamanage/sqlmanage/3.png)
+
+##### 图3-1 SQL管理页面
