--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/4. 删除数据源.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/4. 删除数据源.md
@@ -5,3 +5,11 @@
 ##### 4.2.1 SQL管理
 
 ##### 4.2.1.1 数据源
+
+##### 4.2.1.1.5 删除数据源
+
+本节介绍删除数据源的具体操作过程。
+
+##### 4.2.1.1.5.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，如图4-1所示：
