--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/4. 删除数据源.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/4. 删除数据源.md
@@ -13,3 +13,9 @@
 ##### 4.2.1.1.5.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cscj/datamanage/sqlmanage/4.png)
+
+##### 图4-1 SQL管理页面
+
+b）选中需删除的数据源，单击删除按钮，系统弹出提示信息，单击“确定”即可。
