--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/5. 测试数据库链接.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/1. 数据源/5. 测试数据库链接.md
@@ -7,3 +7,11 @@
 ##### 4.2.1.1 数据源
 
 ##### 4.2.1.1.6 测试数据库链接
+
+本节介绍测试数据库连接的具体操作过程。
+
+##### 4.2.1.1.6.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fstest/cscj/datamanage/sqlmanage/3.png)
