--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/2. 新增数据集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/2. 新增数据集.md
@@ -5,3 +5,11 @@
 ##### 4.2.1 SQL管理
 
 ##### 4.2.1.2.2 数据集
+
+##### 4.2.1.2.2.2 新增数据集
+
+本节介绍新增数据集的具体操作过程。
+
+##### 4.2.1.2.2.2.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，如图2-1所示：
