--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/2. 新增数据集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/2. 新增数据集.md
@@ -13,3 +13,9 @@
 ##### 4.2.1.2.2.2.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cscj/datamanage/sqlmanage/7_1.png)
+
+##### 图2-1 SQL管理页面
+
+b）选择数据源，单击“新增SQL数据集”，系统弹出新增SQL数据集页面，如图2-2所示：
