--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/2. 新增数据集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/2. 新增数据集.md
@@ -29,3 +29,5 @@ c）输入数据集名称、变量名和SQL内容，单击“确定”即可。
 ##### 注意：
 
 ##### c1）多个变量名之间用英文逗号隔开，且变量名需与SQL字段的字段名相同。
+
+##### c2）单击“测试数据集”选项可以测试数据集SQL内容是否正确，但需要注意:若SQL语句属于新增、修改、删除操作时，会真实对数据库进行相应操作，需谨慎操作。
