--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/4. 删除数据集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/4. 删除数据集.md
@@ -11,3 +11,9 @@
 本节介绍删除数据集的具体操作过程。
 
 ##### 4.2.1.2.2.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cscj/datamanage/sqlmanage/9.png)
+
+##### 图4-1 SQL管理页面
