--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/5. 预览数据集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/1. SQL管理/2. 数据集/5. 预览数据集.md
@@ -3,3 +3,11 @@
 #### 4.2 数据集管理
 
 ##### 4.2.1 SQL管理
+
+##### 4.2.1.2.2 数据集
+
+##### 4.2.1.2.2.5 预览数据集
+
+本节介绍预览数据集的具体操作过程。
+
+##### 4.2.1.2.2.5.1 操作步骤
