--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/1. 查询变量集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/1. 查询变量集.md
@@ -3,3 +3,11 @@
 #### 4.2 数据集管理
 
 ##### 4.2.2 变量集管理
+
+##### 4.2.2.1 基础概述
+
+变量集用于作为测试场景的数据源，把常用的变量归类管理，方便测试场景的赋值操作。
+
+##### 4.2.2.2 查询变量集
+
+本节介绍查询变量集的具体操作过程。
